--- a/client/src/App.css
+++ b/client/src/App.css
@@ -131,6 +131,16 @@
 }
 .profilePic { 
   width: 40px;
-  height: 40px;
+  /* height: 40px; */
   
+}
+.detailPic { 
+  width: 300px;
+
+
+}
+.polaroid {
+  width: 300px;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
