--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  
 }
 /* 
 .App-logo {
@@ -27,6 +28,9 @@
 .App-link {
   color: #61dafb;
 } */
+body { 
+  background-color: orange;
+}
 
 @keyframes App-logo-spin {
   from {
