--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,7 +29,7 @@
   color: #61dafb;
 } */
 body { 
-  background-color: orange;
+  background-color: rgb(255, 255, 255);
 }
 
 @keyframes App-logo-spin {
