--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
-  
 }
+
 /* 
 .App-logo {
   height: 40vmin;
@@ -182,7 +182,9 @@ body {
   object-fit: cover;
 }
 .detailPic { 
-  width: 300px;
+  height: 300px;
+  width: 400px;
+  object-fit:cover;
 }
 .polaroid {
   width: 300px;
