--- a/client/src/App.css
+++ b/client/src/App.css
@@ -32,14 +32,14 @@ body {
   background-color: rgb(255, 255, 255);
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
 @media all and (max-width:991px) {
   .myForm { 
     width: 100%;
