--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,45 +1,89 @@
 .App {
   text-align: center;
 }
-
-/* 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-} */
 body { 
   background-color: rgb(255, 255, 255);
 }
-
-/* @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.profilePic { 
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+}
+.detailPic { 
+  height: 300px;
+  width: 300px;
+  object-fit:cover;
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2), 0 10px 40px 0 rgba(0, 0, 0, 0.19); 
+}
+.polaroid {
+  width: 300px;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.polaroid2 {
+  width: 200px;
+  height: 225px;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.saveBtn { 
+  width: 150px;
+  height: 50px;
+  color: white;
+  font-weight: 600;
+  align-self: center;
+}
+.directions { 
+  width: 620px;
+}
+.submitBtn { 
+  width: 100px;
+  height: 50px;
+  color: white;
+  font-weight: 600;
+  align-self: center;
+}
+.myNav { 
+  top: 0; 
+  position:fixed;
+  width: 100%;
+  background-color: rgb(190, 203, 92);
+}
+.custom { 
+  margin-top: 80px;
+}
+.coverFlow {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+.recipeImg { 
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+}
+/* .myCenter { 
+  margin: auto;
+  padding: auto;
 } */
+.likeIcon { 
+  font-size: 50px;
+}
+.searchBtn { 
+  background-color: rgba(233, 215, 56, 0.765);
+  font-weight: 400;
+  color: black;
+}
+.searchBtn:hover{ 
+  background-color: #BECB5C;
+  color: white;
+  font-weight: 400;
+  transition: 0.5s;
+}
+.directionsInput { 
+  height: 30px;
+}
 @media all and (max-width:991px) {
   .myForm { 
     width: 100%;
@@ -49,65 +93,61 @@ body {
     width: 130px;
   }
   .regInput {
-    width: 200px;
+    width: 300px;
     margin-left: 10px;
     height: 30px;
+  }
+  .ingBox { 
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    /* background-color: aqua; */
   }
   .ingLabel {
     margin-bottom: 15px;
     text-align: center;
   }
   .ingInput { 
-    width: 200px;
+    width: 300px;
     height: 30px;
-    margin-left: 30px;
   }
-  .ingBox { 
+  .directions { 
+    width: 300px;
+  }
+  .regBox { 
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    /* padding: 10px; */
     align-items: center;
-  }
-  #servings { 
-    margin-left: 10px;
+    height: 60px;
   }
   .removeBtn { 
     width: 200px;
     align-self: center;
-    margin-bottom: 10px;
+    margin-top: 10px;
   }
   .recipeForm { 
     width: 600px;
   }
-  /* .saveBtn {
-    position:relative;
-  } */
   .profileLink { 
     position: fixed;
     top: 15px;
     right: 20%;
   }
-  .polaroidRecipe {
+  .recipeFrame {
     width: 80%;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
-  
-  
-
-}
-
-/* @media all and (min-width:600px) { 
-  .myForm { 
-    width: 90%;
+  .polaroidRecipe {
+    width: 300px;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
-} */
-
+}
 @media all and (min-width:992px){
   .myForm {
     width: 50%;
-    /* background-color: white;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
   }
   .regLabel { 
     width: 120px;
@@ -123,18 +163,18 @@ body {
   .ingInput { 
     width: 200px;
     height: 30px;
+    margin-right: 10px;
   }
-  .ingBox { 
-    display: flex;
-    flex-direction: row; 
-    align-items: center;
+  .regBox { 
+    height: 60px;
   }
-  #servings { 
+  /* #servings { 
     margin-left: 10px;
-  }
+  } */
   .removeBtn { 
     width: 200px;
     align-self: center;
+    margin-top: 10px;
   }
   .qty{ 
     width: 80px;
@@ -145,118 +185,33 @@ body {
   .uomLabel { 
     width: 120px;
   }
+
   .ingField { 
     align-items: center;
   }
   #topField { 
     display: flex;
     gap: 10px;
-    /* background-color: #61dafb; */
   }
   .recipeForm { 
     width: 800px;
-    /* background-color: blueviolet; */
   }
   .editRecipe { 
     display: flex;
   }
-  /* .saveBtn { 
-    position:relative;
-    width: 100px;
-  
-  } */
   .profileLink { 
     position: fixed;
     top: 15px;
     right: 80px;
   }
-  .polaroidRecipe {
+  .recipeFrame {
     width: 60%;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
+  .polaroidRecipe {
+    width: 300px;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
 }
-.profilePic { 
-  width: 40px;
-  height: 40px;
-  object-fit: cover;
-}
-.detailPic { 
-  height: 300px;
-  width: 300px;
-  object-fit:cover;
-  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2), 0 10px 40px 0 rgba(0, 0, 0, 0.19);
-  
-}
-.polaroid {
-  width: 300px;
-  background-color: white;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-.polaroid2 {
-  width: 200px;
-  height: 225px;
-  background-color: white;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-/* .deleteBtn { 
-  background-color: rgb(78, 47, 216);
-  
-} */
-.saveBtn { 
-  
-  bottom: 0;
-  left: 0;
-  width: 150px;
-  background-color: green;
-  height: 50px;
-  color: white;
-  font-weight: 600;
-  margin-top: 50px;
-  border: 0;
-  padding: 0;
-}
-.submitBtn { 
-  width: 100px;
-  background-color: green;
-  height: 50px;
-  color: white;
-  font-weight: 600;
-  align-self: center;
-}
-.myNav { 
-  top: 0; 
-  position:fixed;
-  width: 100%;
-  background-color: rgb(190, 203, 92);
-}
-.custom { 
-  margin-top: 80px;
-}
-/* body { 
-  background-color: #363633;
-  color: white;
-} */
-.myTest {
-  /* background-color: rgb(99, 37, 199); */
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  flex-wrap: wrap;
-  /* background-color: aqua; */
-  
-}
-.recipeImg { 
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
-}
-.myCenter { 
-  margin: auto;
-  padding: auto;
-}
-.likeIcon { 
-  /* background-color: aqua; */
-  font-size: 50px;
-}
-
