--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,7 +22,7 @@ body {
 }
 .polaroid2 {
   width: 200px;
-  height: 225px;
+  /* height: 225px; */
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
