--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,6 +15,12 @@ body {
   object-fit:cover;
   box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2), 0 10px 40px 0 rgba(0, 0, 0, 0.19); 
 }
+.previewRec { 
+  height: 100px;
+  width: 100px;
+  object-fit:cover;
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2), 0 10px 40px 0 rgba(0, 0, 0, 0.19); 
+}
 .polaroid {
   width: 300px;
   background-color: white;
@@ -68,7 +74,7 @@ body {
   padding: auto;
 } */
 .likeIcon { 
-  font-size: 50px;
+  font-size: 40px;
 }
 .searchBtn { 
   background-color: rgba(233, 215, 56, 0.765);
